<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="statusupdate">Status Update</string>
    <string name="message">Enter message to twitter</string>
    <string name="updatestatus">Update Status</string>
    <string name="timeline">TimeLine</string>
    <string name="details">Details</string>
    <string name="timeline_activity">TimeLine</string>
    <string name="update_timeline">UpdateTimeline</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="server">Enter root server</string>
    <string name="preference">Preference</string>
    <string name="summary_username">Enter username</string>
    <string name="summary_password">Enter password</string>
    <string name="characteres">Characteres</string>
    <string name="summary_characteres">Number of characteres per message</string>
    <string name="nmessages">Number of messages</string>
    <string name="summary_nmessage">Number of messages displayed</string>
    <string name="numbermessages">numbermessages</string>
    <string name="numbercharacteres">NumberCharacteres</string>
    <string name="titleMenuStatus">Status</string>
    <string name="titleMenuTimeline">Timeline</string>
    <string name="titleMenuPreferences">Preferences</string>
    <string name="StatusTitle">Enter text to send:</string>
    <string name="StatusButton">Submit</string>
    <string name="canceled_progress">Canceled</string>
    <string name="submitting_progress">Submitting</string>
    <string name="no_value"></string>
    <string name="done_progress">Success</string>
    <string name="status">StatusActivity</string>
    <string name="user_info">User Info</string>
    <string name="keycheckboxauto">Key_CheckBoxAuto</string>
    <string name="keytimeupdate">Key_TimeUpdate</string>
    <string name="autoupdate">AutoUpdate</string>
    <string name="timeperiodicallyupdate">TimePeriodicallyUpdate</string>
    <string name="key_localmessages">Key_LocalMessages</string>
    <string name="numberoflocalmessages">NumberOfLocalMessages</string>
    <string name="userinfo">User Info</string>
    <string name="nameuserinfo">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="totalstatus">TotalStatus</string>
    <string name="btnEmail">Send by e-mail</string>
    <string name="subjectEmailClient" formatted="false">Yamba message posted by %s @ %s</string>
    <string name="chooseEmailClient">Choose an e-mail client:</string>    
</resources>